# SO_project

./: .gitignore  CMakeLists.txt  README.md  main  makefile
example/: p1.txt  p2.txt  p3.txt  p4.txt
include/: fake_cpu.h  fake_os.h  fake_process.h  linked_list.h  scheduler.h
src/: carousel  carousel.c  fake_os.c  fake_process.c  linked_list.c  scheduler.c
